# ember3-memory

./: .gitignore  LICENSE  README.md  maintain.py  pyproject.toml  schema.sql  setup.sh
ember/: __main__.py  config.py  db.py  embedder.py  server.py  utils.py
ember/hooks/: archive_dream_log.py  context_status.py  distill-prompt.md  dream-prompt.md  pre_compact_export.py  self_compact_trigger.sh  session_end_dream.sh  session_end_export.py  synthesis-prompt.md  unified_stop_hook.sh
examples/: CLAUDE.md.example  meta-embers.md  subagent-recipes.md
