[project]
name = "ember3"
version = "3.0.0"
description = "Unified persistent memory: one SQLite database with sqlite-vec + FTS5"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "onnxruntime>=1.17.0",
    "tokenizers>=0.15.0",
    "sqlite-vec~=0.1.6",
    "numpy>=1.24.0",
    "aiosqlite>=0.20.0",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
fuzzy = ["thefuzz>=0.22.0"]    # Fuzzy string matching for dedup

[tool.hatch.build.targets.wheel]
packages = ["ember"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
